// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrimaryToolbar should render custom className 1`] = `
<Toolbar
  className="custom-classname ins-c-primary-toolbar"
  id="ins-primary-data-toolbar"
  ouiaId="PrimaryToolbar"
  toggleIsExpanded={[Function]}
>
  <ToolbarContent
    isExpanded={false}
    showClearFiltersButton={false}
  />
</Toolbar>
`;

exports[`PrimaryToolbar should render custom id 1`] = `
<Toolbar
  className=" ins-c-primary-toolbar"
  id="custom-id"
  ouiaId="PrimaryToolbar"
  toggleIsExpanded={[Function]}
>
  <ToolbarContent
    isExpanded={false}
    showClearFiltersButton={false}
  />
</Toolbar>
`;

exports[`PrimaryToolbar should render elements instead of data 1`] = `
<Toolbar
  className=" ins-c-primary-toolbar"
  id="ins-primary-data-toolbar"
  ouiaId="PrimaryToolbar"
  toggleIsExpanded={[Function]}
  useMobileLayout={
    <div>
      Loading...
    </div>
  }
>
  <ToolbarContent
    isExpanded={false}
    showClearFiltersButton={false}
  >
    <ForwardRef
      className="ins-c-primary-toolbar__group-filter pf-m-spacer-md pf-m-space-items-lg"
      variant="filter-group"
    >
      <ToolbarItem>
        <div>
          Loading...
        </div>
      </ToolbarItem>
      <ToolbarItem
        className="ins-c-primary-toolbar__filter"
      >
        <div>
          Loading...
        </div>
      </ToolbarItem>
    </ForwardRef>
    <div>
      Loading...
    </div>
    <ToolbarItem
      className="ins-c-primary-toolbar__sort-by"
    >
      <div>
        Loading...
      </div>
    </ToolbarItem>
    <ToolbarItem
      className="ins-c-primary-toolbar__pagination"
    >
      <div>
        Loading...
      </div>
    </ToolbarItem>
  </ToolbarContent>
  <ToolbarContent
    isExpanded={false}
    showClearFiltersButton={false}
  >
    <ToolbarItem>
      <div>
        Loading...
      </div>
    </ToolbarItem>
  </ToolbarContent>
</Toolbar>
`;

exports[`PrimaryToolbar should render no data 1`] = `
<Toolbar
  className=" ins-c-primary-toolbar"
  id="ins-primary-data-toolbar"
  ouiaId="PrimaryToolbar"
  toggleIsExpanded={[Function]}
>
  <ToolbarContent
    isExpanded={false}
    showClearFiltersButton={false}
  />
</Toolbar>
`;

exports[`PrimaryToolbar should render with data full config 1`] = `
<Toolbar
  className=" ins-c-primary-toolbar"
  id="ins-primary-data-toolbar"
  ouiaId="PrimaryToolbar"
  toggleIsExpanded={[Function]}
  useMobileLayout={true}
>
  <ToolbarContent
    isExpanded={false}
    showClearFiltersButton={false}
  >
    <ForwardRef
      className="ins-c-primary-toolbar__group-filter pf-m-spacer-md pf-m-space-items-lg"
      variant="filter-group"
    >
      <ToolbarItem>
        <BulkSelect
          checked={false}
          items={
            [
              {
                "onClick": [MockFunction],
                "title": "Some action",
              },
            ]
          }
          onSelect={[MockFunction]}
        />
      </ToolbarItem>
      <ToolbarItem
        className="ins-c-primary-toolbar__filter"
      >
        <ConditionalFilter
          items={
            [
              {
                "label": "First filter",
                "type": "text",
              },
              {
                "filterValues": {
                  "items": [
                    {
                      "label": "Some checkbox",
                    },
                  ],
                },
                "label": "Second filter",
                "type": "checkbox",
              },
            ]
          }
        />
      </ToolbarItem>
    </ForwardRef>
    <Actions
      actions={
        [
          <Button
            onClick={[MockFunction]}
          >
             
            Some action
          </Button>,
          <Button
            onClick={[MockFunction]}
          >
            Another button
          </Button>,
          {
            "label": "Or objects",
            "onClick": [MockFunction],
          },
          "or plain string",
        ]
      }
      dropdownProps={
        {
          "className": "custom-class",
        }
      }
      exportConfig={
        {
          "onSelect": [MockFunction],
        }
      }
      onSelect={[MockFunction]}
      overflowActions={
        [
          {
            "label": "Sort order ASC",
            "onClick": [Function],
            "props": {
              "isDisabled": true,
            },
          },
          {
            "label": "Sort order DESC",
            "onClick": [Function],
            "props": {
              "isDisabled": false,
            },
          },
        ]
      }
    />
    <ToolbarItem
      className="ins-c-primary-toolbar__sort-by"
    >
      <SortBy
        direction="asc"
        onSortChange={[MockFunction]}
      />
    </ToolbarItem>
    <ToolbarItem
      className="ins-c-primary-toolbar__pagination"
    >
      <Pagination
        isCompact={true}
        itemCount={100}
        onPerPageSelect={[MockFunction]}
        onSetPage={[MockFunction]}
        ouiaId="CompactPagination"
        page={1}
        perPage={10}
      />
    </ToolbarItem>
  </ToolbarContent>
  <ToolbarContent
    isExpanded={false}
    showClearFiltersButton={false}
  >
    <ToolbarItem>
      <FilterChips
        filters={
          [
            {
              "category": "Some",
              "chips": [
                {
                  "name": "something",
                },
                {
                  "name": "something 2",
                },
              ],
            },
            {
              "category": "Another",
              "chips": [
                {
                  "name": "One chip",
                },
              ],
            },
            {
              "name": "Something else",
            },
          ]
        }
        onDelete={[MockFunction]}
      />
    </ToolbarItem>
  </ToolbarContent>
</Toolbar>
`;

exports[`PrimaryToolbar should render with data only - bulk select 1`] = `
<Toolbar
  className=" ins-c-primary-toolbar"
  id="ins-primary-data-toolbar"
  ouiaId="PrimaryToolbar"
  toggleIsExpanded={[Function]}
>
  <ToolbarContent
    isExpanded={false}
    showClearFiltersButton={false}
  >
    <ForwardRef
      className="ins-c-primary-toolbar__group-filter pf-m-spacer-md pf-m-space-items-lg"
      variant="filter-group"
    >
      <ToolbarItem>
        <BulkSelect
          checked={false}
          items={
            [
              {
                "onClick": [MockFunction],
                "title": "Some action",
              },
            ]
          }
          onSelect={[MockFunction]}
        />
      </ToolbarItem>
    </ForwardRef>
  </ToolbarContent>
</Toolbar>
`;

exports[`PrimaryToolbar should render with data only - filterConfig 1`] = `
<Toolbar
  className=" ins-c-primary-toolbar"
  id="ins-primary-data-toolbar"
  ouiaId="PrimaryToolbar"
  toggleIsExpanded={[Function]}
>
  <ToolbarContent
    isExpanded={false}
    showClearFiltersButton={false}
  >
    <ForwardRef
      className="ins-c-primary-toolbar__group-filter pf-m-spacer-md pf-m-space-items-lg"
      variant="filter-group"
    >
      <ToolbarItem
        className="ins-c-primary-toolbar__filter"
      >
        <ConditionalFilter
          items={
            [
              {
                "label": "First filter",
                "type": "text",
              },
              {
                "filterValues": {
                  "items": [
                    {
                      "label": "Some checkbox",
                    },
                  ],
                },
                "label": "Second filter",
                "type": "checkbox",
              },
            ]
          }
        />
      </ToolbarItem>
    </ForwardRef>
  </ToolbarContent>
</Toolbar>
`;

exports[`PrimaryToolbar should render wrong actionsConfig 1`] = `
<Toolbar
  className=" ins-c-primary-toolbar"
  id="ins-primary-data-toolbar"
  ouiaId="PrimaryToolbar"
  toggleIsExpanded={[Function]}
  useMobileLayout={true}
>
  <ToolbarContent
    isExpanded={false}
    showClearFiltersButton={false}
  >
    <ForwardRef
      className="ins-c-primary-toolbar__group-filter pf-m-spacer-md pf-m-space-items-lg"
      variant="filter-group"
    >
      <ToolbarItem>
        <BulkSelect
          checked={false}
          items={
            [
              {
                "onClick": [MockFunction],
                "title": "Some action",
              },
            ]
          }
          onSelect={[MockFunction]}
        />
      </ToolbarItem>
      <ToolbarItem
        className="ins-c-primary-toolbar__filter"
      >
        <ConditionalFilter
          items={
            [
              {
                "label": "First filter",
                "type": "text",
              },
              {
                "filterValues": {
                  "items": [
                    {
                      "label": "Some checkbox",
                    },
                  ],
                },
                "label": "Second filter",
                "type": "checkbox",
              },
            ]
          }
        />
      </ToolbarItem>
    </ForwardRef>
    <Actions
      exportConfig={
        {
          "onSelect": [MockFunction],
        }
      }
      overflowActions={
        [
          {
            "label": "Sort order ASC",
            "onClick": [Function],
            "props": {
              "isDisabled": true,
            },
          },
          {
            "label": "Sort order DESC",
            "onClick": [Function],
            "props": {
              "isDisabled": false,
            },
          },
        ]
      }
    />
    <ToolbarItem
      className="ins-c-primary-toolbar__sort-by"
    >
      <SortBy
        direction="asc"
        onSortChange={[MockFunction]}
      />
    </ToolbarItem>
    <ToolbarItem
      className="ins-c-primary-toolbar__pagination"
    >
      <Pagination
        isCompact={true}
        itemCount={100}
        onPerPageSelect={[MockFunction]}
        onSetPage={[MockFunction]}
        ouiaId="CompactPagination"
        page={1}
        perPage={10}
      />
    </ToolbarItem>
  </ToolbarContent>
  <ToolbarContent
    isExpanded={false}
    showClearFiltersButton={false}
  >
    <ToolbarItem>
      <FilterChips
        filters={
          [
            {
              "category": "Some",
              "chips": [
                {
                  "name": "something",
                },
                {
                  "name": "something 2",
                },
              ],
            },
            {
              "category": "Another",
              "chips": [
                {
                  "name": "One chip",
                },
              ],
            },
            {
              "name": "Something else",
            },
          ]
        }
        onDelete={[MockFunction]}
      />
    </ToolbarItem>
  </ToolbarContent>
</Toolbar>
`;
